# HiFi-Net-Localization-Custom

./: README.md  main.py  train.py
skripsi_code/: .gitignore  dataset.py  main.py  overview.md  plot_metrics.py  plot_metrics_val.py  pyproject.toml  resolution_manipulation.py  split_dataset.py  test.py  train.py  train_test.py
skripsi_code/logs/: metrics.csv  test_metrics.csv
skripsi_code/logs/2 May/: metrics.csv
skripsi_code/models/: NLCDetection_loc.py  seg_hrnet.py
skripsi_code/utils/: DiceLoss.py  custom_loss.py
